# aic-sdk-node

./: .gitignore  .npmignore  Cargo.toml  DEVELOPMENT.md  LICENSE  LICENSE.AIC-SDK  LICENSE.AIC_SDK  PUBLISHING.md  README.md  binding.gyp  index.js  package-lock.json  package.json  test-basic.js  tsconfig.json
.github/workflows/: build.yml  quailty.yml  test.yml
examples/: README.md  analysis.js  basic.js  example.js  example.ts  file-processing.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
release/: release-notes.md
scripts/: build-all.sh  download-sdk.js  update-version.sh
src/: analyzer.rs  binding.cc  index.ts  lib.rs  model.rs  processor.rs  processor_context.rs  vad_context.rs
tests/: common.js  end2end.test.js
tests/data/: vad_results.json
