[package]
name = "aic-sdk-node"
version = "0.10.0"
description = "Node.js package of ai-coustics SDK"
authors = ["ai-coustics GmbH"]
license = "Apache-2.0"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aic-sdk = { version = "0.10.0", features = ["download-lib"] }
neon = "1.1"
