[package]
authors = ["ai-coustics GmbH"]
description = "Node.js package of ai-coustics SDK"
edition = "2024"
exclude = ["index.node"]
license = "Apache-2.0"
name = "aic-sdk-node"
rust-version = "1.87"
version = "0.13.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
aic-sdk = { version = "0.13.1", features = ["download-lib", "download-model"] }
neon = "1.1"
