[package]
authors = ["ai-coustics GmbH"]
description = "Node.js Bindings for ai-coustics SDK"
edition = "2024"
exclude = ["index.node"]
license = "Apache-2.0"
name = "aic-sdk-node"
rust-version = "1.87"
version = "0.13.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aic-sdk = { version = "0.13.1", features = ["download-lib", "download-model"] }
neon = "1.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
